# rules_nodejs_dep_repro

./: BUILD.bazel  WORKSPACE  index.js  package.json  webpack.config.js
