load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

webpack(
    name = "bundle",
    args = [
        "$(location index.js)",
        "--config",
        "$(location webpack.config.js)",
        "--output-path",
        "$@",
    ],
    #Note that we do not include @npm//lodash in `data`
    data = [
        "index.js",
        "webpack.config.js",
        "@npm//@babel/preset-env",
        "@npm//babel-loader",
    ],
    output_dir = True,
)
